# ROS_trajectory_tracking_controller

./: .gitignore  README.md
material/presentation/: slides.tex
material/report/: report.tex  report.toc
material/report/config_files/: config.tex  title_page.tex
src/: CMakeLists.txt
src/bicycle_kin_ctrl/: CMakeLists.txt  package.xml
src/bicycle_kin_ctrl/config/: bicycle_kin_linctrl.yaml  bicycle_kin_trajctrl.yaml
src/bicycle_kin_ctrl/include/: bicycle_kin_fblin.h
src/bicycle_kin_ctrl/include/bicycle_kin_ctrl/: bicycle_kin_linctrl.h  bicycle_kin_trajctrl.h
src/bicycle_kin_ctrl/launch/: bicycle_dyn_trajctrl.launch  bicycle_kin_linctrl.launch  bicycle_kin_trajctrl.launch
src/bicycle_kin_ctrl/script/: plot_result_linctrl.py  plot_result_trajctrl.py
src/bicycle_kin_ctrl/src/: bicycle_kin_fblin.cpp  bicycle_kin_linctrl.cpp  bicycle_kin_linctrl_node.cpp  bicycle_kin_trajctrl.cpp  bicycle_kin_trajctrl_node.cpp
src/diffdrive_dwa_ctrl/: CMakeLists.txt  notes.txt  package.xml  report_params.txt
src/diffdrive_dwa_ctrl/config/: costmaps_params.yaml  diffdrive_dwa_trajctrl.yaml  dwa_planner_params.yaml  map_server_params.yaml  odom_to_baselink_tf.yaml
src/diffdrive_dwa_ctrl/include/diffdrive_dwa_ctrl/: diffdrive_dwa_trajctrl.h  odom_to_baselink_tf.h
src/diffdrive_dwa_ctrl/include/dwa_local_planner/: dwa_planner_ros.h
src/diffdrive_dwa_ctrl/launch/: diffdrive_dwa_trajctrl.launch
src/diffdrive_dwa_ctrl/rviz/: odom_visualizer.rviz
src/diffdrive_dwa_ctrl/src/: diffdrive_dwa_trajctrl.cpp  diffdrive_dwa_trajctrl_node.cpp  dwa_planner.cpp  odom_to_baselink_tf.cpp  odom_to_baselink_tf_node.cpp
src/diffdrive_kin_ctrl/: CMakeLists.txt  package.xml
src/diffdrive_kin_ctrl/config/: diffdrive_kin_trajctrl.yaml  eight_traj.yaml
src/diffdrive_kin_ctrl/include/: diffdrive_kin_fblin.h  eight_traj_gen.h
src/diffdrive_kin_ctrl/include/diffdrive_kin_ctrl/: diffdrive_kin_trajctrl.h
src/diffdrive_kin_ctrl/launch/: diffdrive_kin_trajctrl.launch
src/diffdrive_kin_ctrl/rviz/: odom_visualizer.rviz
src/diffdrive_kin_ctrl/script/: plot_comparison.py  plot_result_comparison.py  plot_result_trajctrl.py  plot_results.py
src/diffdrive_kin_ctrl/src/: diffdrive_kin_fblin.cpp  diffdrive_kin_trajctrl.cpp  diffdrive_kin_trajctrl_node.cpp  eight_traj_gen.cpp
src/diffdrive_kin_ctrl/srv/: GenerateDesiredPathService.srv
src/diffdrive_kin_sim/: CMakeLists.txt  package.xml
src/diffdrive_kin_sim/config/: diffdrive_kin_sim.yaml
src/diffdrive_kin_sim/include/: diffdrive_kin_ode.h
src/diffdrive_kin_sim/include/diffdrive_kin_sim/: diffdrive_kin_sim.h
src/diffdrive_kin_sim/src/: diffdrive_kin_ode.cpp  diffdrive_kin_sim.cpp  diffdrive_kin_sim_node.cpp
src/dwa_demo/: CMakeLists.txt  notes.txt  package.xml
src/dwa_demo/config/: costmap_params.yaml  costmaps_params.yaml  dwa_planner_params.yaml  map_server_params.yaml
src/dwa_demo/include/dwa_local_planner/: dwa_planner.h  dwa_planner_ros.h
src/dwa_demo/launch/: demo.launch
src/dwa_demo/src/: demo.cpp  dwa_planner_ros.cpp  odom_to_baselink_tf.cpp
src/trajectory_generator/: CMakeLists.txt  package.xml
src/trajectory_generator/config/: eight_traj.yaml
src/trajectory_generator/include/trajectory_generator/: eight_traj_gen.h
src/trajectory_generator/src/: eight_traj_gen.cpp  eight_traj_gen_node.cpp
src/unicycle_kin_ctrl/: CMakeLists.txt  package.xml
src/unicycle_kin_ctrl/config/: unicycle_kin_linctrl.yaml  unicycle_kin_trajctrl.yaml
src/unicycle_kin_ctrl/include/: unicycle_kin_fblin.h
src/unicycle_kin_ctrl/include/unicycle_kin_ctrl/: unicycle_kin_linctrl.h  unicycle_kin_trajctrl.h
src/unicycle_kin_ctrl/launch/: unicycle_kin_linctrl.launch  unicycle_kin_trajctrl.launch
src/unicycle_kin_ctrl/script/: plot_result_linctrl.py
src/unicycle_kin_ctrl/src/: unicycle_kin_fblin.cpp  unicycle_kin_linctrl.cpp  unicycle_kin_linctrl_node.cpp  unicycle_kin_trajctrl.cpp  unicycle_kin_trajctrl_node.cpp
src/unicycle_kin_sim/: CMakeLists.txt  package.xml
src/unicycle_kin_sim/config/: unicycle_kin_sim.yaml
src/unicycle_kin_sim/include/: unicycle_kin_ode.h
src/unicycle_kin_sim/include/unicycle_kin_sim/: test_eight.h  test_simple.h  unicycle_kin_sim.h
src/unicycle_kin_sim/launch/: test_eight_unicycle_kin.launch  test_simple_unicycle_kin.launch  unicycle_kin_sim.launch
src/unicycle_kin_sim/script/: plot_result.py
src/unicycle_kin_sim/src/: test_eight.cpp  test_eight_node.cpp  test_simple.cpp  test_simple_node.cpp  unicycle_kin_ode.cpp  unicycle_kin_sim.cpp  unicycle_kin_sim_node.cpp
unused/presentation/: slides.tex
