<?xml version="1.0"?>
<package format="2">
  
  <name>diffdrive_kin_sim</name>
  <version>0.0.1</version>

  <description>
    Package to perform the simulation of a diffdrive robot through its kinematic
    model: given the robot input, it determines the robot state.
  </description>
  
  <maintainer email="leonardo.gargani@mail.polimi.it">Leonardo Gargani</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <depend>tf2_ros</depend>


  <export>
  </export>

</package>
